feat: implementar registro de café y limpieza de código
Se agrega la funcionalidad para registrar un nuevo café a través de un formulario y se envía la información a una API remota.

También se incluyen las siguientes mejoras:
- Se crea la `RegistroView` con su respectivo layout `activity_registro_view.xml` para la entrada de datos del nuevo café.
- Se añade el endpoint `postCafe` a la interfaz `ApiService` de Retrofit para manejar la solicitud POST.
- Se introduce el modelo `respuestaRegistro` para gestionar la respuesta del servidor.
- Se reorganiza el `AndroidManifest.xml` para declarar la nueva actividad y establecer `RegistroView` como la actividad de inicio.
- Se elimina un `Toast` de depuración en `DetalleWebActivity`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CafeMendoza">
         <activity
-            android:name=".Vistas.DetalleWebActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Vistas.CafeWebView"
+            android:name=".Vistas.RegistroView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,10 +25,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Vistas.CafeView"
+            android:name=".Vistas.DetalleWebActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Vistas.CafeWebView"
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".Vistas.CafeView"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
