feat: implementar la funcionalidad de inicio de sesión
Se agrega una pantalla de inicio de sesión (`loginView`) que permite a los usuarios autenticarse contra una API remota. Al iniciar sesión correctamente, se navega a la pantalla principal (`CafeWebView`) pasando el nombre completo y el rol del usuario.

Cambios adicionales:
- Se crea el layout `activity_login_view.xml` para la interfaz de inicio de sesión.
- Se define el modelo de datos `respuestaLogin` para gestionar la respuesta de la API.
- Se añade el endpoint `login` a la interfaz `ApiService` de Retrofit para manejar la autenticación.
- Se actualiza el `AndroidManifest.xml` para establecer `loginView` como la actividad de inicio.
- Se definen nuevos colores con temática de café en `colors.xml`.
- Se elimina un `Toast` de depuración en `RegistroView`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,25 +16,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CafeMendoza">
         <activity
-            android:name=".Vistas.RegistroView"
+            android:name=".Vistas.loginView"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Vistas.RegistroView"
+            android:exported="true">
         </activity>
         <activity
             android:name=".Vistas.DetalleWebActivity"
             android:exported="false" />
         <activity
             android:name=".Vistas.CafeWebView"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Vistas.CafeView"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
